examples/testgui/Errors/postgui.hal
setp flexhal.hal-label 99
